# foc-motor-ctrl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  canopen.cpp  canopen.h  cmdline.cpp  foc-mc.eds  launch_dashboard.sh  launch_server.sh  mc_bokeh.py
apps/cmake/: Findmotor_control.cmake
cmake/: FindLibIIO.cmake
docs/: foc_motor_control_landing.rst
docs/src/: app_deployment.md  canopen_obj_dic.md  hw_description.md  introduction.md  known_issues.md  sw_arch.md
lib/: CMakeLists.txt
lib/configs/: anaheim.config
lib/include/motor-control/: motor-control.hpp
lib/src/: adchub.cpp  adchub.h  anaheim.config.txt  avgpower.cpp  avgpower.h  config_parameters.cpp  config_parameters.h  default_config.h  event_control.h  event_manager.cpp  event_manager.h  foc.cpp  foc.h  mc_driver.cpp  mc_driver.h  motor-control.cpp  pwm.cpp  pwm.h  python_bind.cpp  softip.h  softwarefaults.cpp  softwarefaults.h  svpwm.cpp  svpwm.h
lib/src/interface/: iio_drv.cpp  iio_drv.h  uio_drv.cpp  uio_drv.h
lib/src/sensors/: qei.cpp  qei.h  sensor.cpp  sensor.h  smo.cpp  smo.h
test/: CMakeLists.txt  cpp_libtest.cpp  py_libtest.py
test/cmake/: Findfoc_motor_ctrl.cmake
test/ros2_canopen/: CMakeLists.txt  package.xml
test/ros2_canopen/config/402_control/: bus.yml  foc-mc.eds  ros2_controllers.yaml
test/ros2_canopen/config/402_system/: bus.yml
test/ros2_canopen/config/motor_control/: bus.yml
test/ros2_canopen/launch/: kd240.launch.py  kd240.ros2_control.launch.py  kd240.system.launch.py
test/ros2_canopen/urdf/: kd240.urdf.xacro  motor_kit.xacro  ros2_control.xacro
test/ros2_co_control/: CMakeLists.txt  package.xml
test/ros2_co_control/config/: ros2_controllers.yaml
test/ros2_co_control/config/motor_control/: bus.yml
test/ros2_co_control/launch/: kd240_control.launch.py
test/ros2_co_control/urdf/: kd240.urdf.xacro  motor_kit.xacro  ros2_control.xacro
