<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kria_motor_control</name>
  <version>0.4.0</version>
  <description>Example package to demontrate access to Kria FOC Motor over canopen</description>
  <maintainer email="pallav.joshi@amd.com">pallav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lely_core_libraries</build_depend>

  <exec_depend>canopen_402_driver</exec_depend>
  <exec_depend>canopen_core</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
